NEW266555
Unable to scroll by dragging the scrollbar on right-to-left or bottom-to-left scrollable areas.
https://bugs.webkit.org/show_bug.cgi?id=266555
Summary Unable to scroll by dragging the scrollbar on right-to-left or bottom-to-left...
Ethan Wong
Reported 2023-12-17 09:52:11 PST
Created attachment 469101 [details] A page to reproduce this issue. Right-to-left or bottom-to-left scrollable areas are unable to scroll by dragging the scrollbars and the scrollbars would reset once being dragged. The attached html page would be an example, which uses flex-direction: column-reverse to generate a horizontal bottom-to-top flow.
Attachments
A page to reproduce this issue. (1.26 KB, text/html)
2023-12-17 09:52 PST, Ethan Wong
no flags
Ethan Wong
Comment 1 2023-12-17 09:54:24 PST
Radar WebKit Bug Importer
Comment 2 2023-12-24 09:53:16 PST
Note You need to log in before you can comment on or make changes to this bug.