Allow scrolling right-to-left or bottom-to-top scrollable areas by dragging the scrollbar. https://bugs.webkit.org/show_bug.cgi?id=266555

Reviewed by NOBODY (OOPS!).

ScrollableArea::scrollToOffsetWithoutAnimation(ScrollbarOrientation, float offset)
should convert the offsets into scroll positions before calling
scrollToPositionWithoutAnimation, hence taking the scrollOrigin into consideration.

This fixes issues that right-to-left or bottom-to-top scrollable areas are not
scrollable by dragging the scrollbar.

* LayoutTests/fast/scrolling/rtl-bt-drag-scroller-expected.txt: Added.
* LayoutTests/fast/scrolling/rtl-bt-drag-scroller.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/platform/ScrollableArea.cpp:
(WebCore::ScrollableArea::scrollToPositionWithoutAnimation):
(WebCore::ScrollableArea::scrollToOffsetWithoutAnimation):
* Source/WebCore/platform/ScrollableArea.h:
* Source/WebCore/platform/Scrollbar.cpp:
(WebCore::Scrollbar::moveThumb):
* Source/WebCore/rendering/RenderListBox.cpp:
(WebCore::RenderListBox::layout):
(WebCore::RenderListBox::scrollToRevealElementAtListIndex):
(WebCore::RenderListBox::setLogicalScrollTop):